--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -16,6 +16,24 @@
             </div>
        </div>
 
+       <div class="form-group">
+           <label for="startDate">StartDate</label>
+           <input type="text"
+           placeholder="Start Date"
+           class="form-control"
+           [(ngModel)]="startDate"
+           name="startDate"
+           id="startDate"
+           bsDatepicker>
+       </div>
+
+       <button type="button" class="btn btn-primary"
+            name="singleModel"
+            [(ngModel)]="singleModel" btnCheckbox
+            btnCheckboxTrue="On" btnCheckboxFalse="Off">
+            {{ singleModel }}
+        </button>
+
        <div class="form-check form-group">
             <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" [(ngModel)]="userSettings.emailOffers" />
             <label class="form-check-label" for="emailOffers">
@@ -24,25 +42,14 @@
         </div>
 
         <p>User Interface Style</p>
-        <div class="form-group">
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" value="light" checked [(ngModel)]="userSettings.interfaceStyle" />
-                <label class="form-check-label" for="lightInterface">
-                    Light
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface" value="medium" [(ngModel)]="userSettings.interfaceStyle" />
-                <label class="form-check-label" for="mediumInterface">
-                    Medium
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="interfaceStyle" value="dark" [(ngModel)]="userSettings.interfaceStyle" />
-                <label class="form-check-label" for="interfaceStyle">
-                        Dark
-                </label>
-            </div>
+
+        <div class="btn-group">
+            <label class="btn btn-primary" name="interfaceStyle" [(ngModel)]="userSettings.interfaceStyle"
+                    btnRadio="light" tabindex="0" role="button">Light</label>
+            <label class="btn btn-primary" name="interfaceStyle" [(ngModel)]="userSettings.interfaceStyle"
+                    btnRadio="medium" tabindex="0" role="button">Medium</label>
+            <label class="btn btn-primary" name="interfaceStyle" [(ngModel)]="userSettings.interfaceStyle"
+                    btnRadio="dark" tabindex="0" role="button">Dark</label>
         </div>
 
         <div class="form-group">
